# plataforma-sinodal

./: .gitignore  DESIGN.md  PRD-image.md  PRD.md  Procfile  README.md  docker-compose.yml  instrucoes_financeiro.md  pyproject.toml  requisitos_funcionais_sessoes.md
apps/eventos/: admin.py  emails.py  forms.py  models.py  urls.py  views.py
apps/eventos/migrations/: 0001_initial.py  0002_inscricao_observacoes.py  0003_evento_vagas.py  0004_evento_inscricoes_fim_evento_inscricoes_inicio.py  0005_evento_chave_pix_evento_instrucoes_pagamento_and_more.py  0006_evento_tipo_financeiro.py  0007_inscricao_infinitepay_link_id_and_more.py  0008_alter_inscricao_credential_url_and_more.py  0009_alter_documentoevento_arquivo_url.py  0010_inscricao_motivo_rejeicao.py  0011_alter_presenca_unique_together_and_more.py
apps/eventos/services/: infinitepay.py
apps/hub/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/hub/migrations/: 0001_initial.py  (+1 more)
apps/usuarios/: admin.py  forms.py  models.py  urls.py  views.py
core/: constants.py  mixins.py  settings.py  urls.py
static/css/: style.css
static/js/: image-upload.js  main.js
templates/: base.html  home.html
templates/emails/: credencial_validada.html  inscricao_aprovada.html  pagamento_confirmado.html
templates/eventos/: confirmacao.html  detalhe.html  form_evento.html  gerenciar.html  gerenciar_campos.html  hub.html  inscrever.html  inscricoes.html  lista.html
templates/hub/: gerenciar_documentos.html  index.html
templates/usuarios/: gerenciar.html  login.html  perfil.html  register.html
(+5 files in other folders)
