[tool.poetry]
name = "plataforma-sinodal"
version = "0.1.0"
description = ""
authors = ["Leandro Machado <leandrovictoram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.6"
psycopg = "^3.2.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
sentry-sdk = {extras = ["django"], version = "^2.22.0"}
django-htmx = "^1.27.0"
pillow = "^12.2.0"
cloudinary = "^1.44.2"
django-cloudinary-storage = "^0.3.0"
requests = "^2.33.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings = "^1.0.4"
mkdocstrings-python = "^2.0.3"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
